mockers_derive/tests/compile-fail/derive_duplicate_item.rs
use mockers_derive::mocked;

#[mocked(derive(Clone, Clone))]
trait A {}

fn main() {
    compile_error!("Warnings verification");
}
